--- a/project-document.html
+++ b/project-document.html
@@ -31,7 +31,7 @@
                            
                             <li>
                                
-                                <a href="project-info.html" class="nav-link" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Project information">
+                                <a href="index.html" class="nav-link" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Project information">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M20.7797 19.3399H3.21973C2.80973 19.3399 2.46973 18.9999 2.46973 18.5899V13.6499C2.46973 8.42993 6.71973 4.17993 11.9397 4.17993H12.0597C17.2797 4.17993 21.5297 8.42993 21.5297 13.6499V18.5899C21.5297 18.9999 21.1897 19.3399 20.7797 19.3399ZM3.96973 17.8399H20.0297V13.6499C20.0297 9.24993 16.4497 5.67993 12.0597 5.67993H11.9397C7.53973 5.67993 3.96973 9.25993 3.96973 13.6499V17.8399V17.8399Z" fill="#C6B1B2"/>
                                         <path d="M12 5.67999C11.59 5.67999 11.25 5.33999 11.25 4.92999V2C11.25 1.59 11.59 1.25 12 1.25C12.41 1.25 12.75 1.59 12.75 2V4.92999C12.75 5.33999 12.41 5.67999 12 5.67999Z" fill="#C6B1B2"/>
